# Color_Palette

./: .gitignore  README.md  __main__.py  classes.py  helper_functions.py  image_functions.py  pyproject.toml  requirements.txt  setup.py
color_palette/: classes.py
save/: config.txt
src/: image_functions.py
