[project]
name = "Color_Palette_ARaveMistake"
version = "1.0.1"
authors = [
  { name="Adrian Urbaniak", email="adrian.urbaniak1336@gmail.com" },
]
description = "A tool for artists that allows to create and save color palettes using text and images."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
                "extcolors>=1.0.0,<2.0",
                "matplotlib>=3.6.2,<4.0",
                "numpy>=1.23.5,<2.0",
                "opencv_python>=4.6.0.66,<5.0",
                "Pillow>=9.3.0,<10.0",
                "PyAutoGUI>=0.9.53,<1.0",
                "pyperclip>=1.8.2,<2.0"
]
classifiers = [
                "Topic :: Software Development",
                "Programming Language :: Python :: 3.10",
                "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
                "Operating System :: Microsoft :: Windows :: Windows 10",
]

[build-system]
requires = [
                "setuptools >= 35.0.2",
                "setuptools_scm >= 2.0.0, <3.0"
]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/FancySnacks/Color_Palette"

[tool.black]
include = '\.pyi?$'
exclude = '''

(
  /(
    | \.git
    | \.hg
    | \.mypy_cache
    | \.venv
    | _build
    | build
    | dist
  )/
)
'''
